overflow fix

--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -180,6 +180,7 @@ h3 {
 .post_text {
 	margin: 10px 50px 0px  0px;
 	line-height: 1.5em;
+	word-wrap: break-word;
 }
 
 a.readmore {
@@ -187,11 +188,11 @@ a.readmore {
 }
 
 form {
-	width: 60%;
+	width: 90%;
 }
 
 label {
-	width: 15%;
+	width: 30%;
 	margin: 5px;
 	display: inline-block;
 }
@@ -207,7 +208,7 @@ input.submit {
 }
 
 .new_post_button {
-	width: 15%;
+	width: 130px;
 	margin: 20px 0px 0px 0px;
 	padding: 10px;
 	font-size: 14pt;
@@ -215,7 +216,7 @@ input.submit {
 }
 
 .new_post {
-	width: 60%;
+	width: 100%;
 	margin: 0px;
 	border: none;
 }
@@ -228,13 +229,13 @@ input.submit {
 }
 
 .new_post input {
-	width: 70%;
+	width: 100%;
 	margin: 10px 0px 20px 0px;
 	display: block;
 }
 
 .new_post textarea {
-	width: 70%;
+	width: 100%;
 	height: 600px;
 }
 .new_post input.submit {
